--- a/client/src/components/blog-post-list/blog-post-list.style.css
+++ b/client/src/components/blog-post-list/blog-post-list.style.css
@@ -1,20 +1,55 @@
-.app-wrapper {
-    background: #ffffff;
+.blog-post-list {
+  padding: 0 1rem;
 }
 
-.app-wrapper > h1 {
-    text-align: center;
-    text-transform: uppercase;
-    color: #341b79;
-    font-size: 2.5rem;
+.blog-post-list > h2{
+  text-transform: uppercase;
+  text-align: left;
+  color: #5629c8;
+  font-size: 2rem;
+  border-bottom: 1px solid #e5dcff;
 }
 
-.app > h6 {
-    text-align: left;
-    color: #373737;
-    font-weight: normal;
-    margin-left: 4rem;
-    margin-top: 0;
-    margin-bottom: 5rem;
-    font-size: 0.8rem;
+.blog-post-container {
+  text-align: left;
+  color: #373737;
+  font-weight: normal;
+  font-size: 1rem;
+  margin: 0;
+  padding: 1rem;
+}
+
+.blog-post-container:hover {
+  background: #eeeeee;
+  cursor: pointer;
+}
+
+.blog-post-header > h3 {
+  text-align: left;
+  color: #946fff;
+  font-size: 1.5rem;
+}
+
+.blog-post-container:not(:last-child) {
+  border-bottom: 1px solid #d6d6d6;
+}
+
+.blog-post-footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.blog-post-nbr-comments {
+  font-weight: bold;
+}
+
+.blog-post-nbr-comments > span {
+  margin-left: 10px;
+}
+.blog-post-date {
+  justify-content: flex-end;
+}
+
+.blog-post-date > span {
+  margin-left: 10px;
 }
