--- a/client/src/components/loader/loader.style.css
+++ b/client/src/components/loader/loader.style.css
@@ -1,20 +1,9 @@
-.app-wrapper {
-    background: #ffffff;
+.loading{
+  text-align: center;
+  animation: fadeIn linear 1s;
 }
 
-.app-wrapper > h1 {
-    text-align: center;
-    text-transform: uppercase;
-    color: #341b79;
-    font-size: 2.5rem;
-}
-
-.app > h6 {
-    text-align: left;
-    color: #373737;
-    font-weight: normal;
-    margin-left: 4rem;
-    margin-top: 0;
-    margin-bottom: 5rem;
-    font-size: 0.8rem;
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
 }
