--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,25 +7,8 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-table {
-    padding: 1rem;
-    border-collapse: collapse;
-    border-spacing: 0;
-    width: 95%;
-    margin: 0 auto 5rem;
-}
-
-table .is-number {
-    text-align: right !important;
-}
-
-table .is-important {
-    font-weight: bold !important;
+.loading {
+    text-align: center;
 }
 
 * {
